tests/invalid/variables/bad_decl.rs
/*
fail: 1
*/

main(): i32 {
    a: i64s = 1;
    return a;
}